# stock-models

./: .gitignore  CustomStrategy.html  pyproject.toml  requirements.txt
.cursor/skills/stock-data/: SKILL.md
docs/量化/: Backtrader框架最佳实践.md  Backtrader框架架构.md  仓位管理指南.md  回测框架对比.md  指标存储使用指南.md  框架选择指南.md  量化模型思考.md
docs/量化/模型/: 水池模型.md
docs/量化/模型/火炉模型/: 场景应对.md  模型.md  火炉模型1.md  火炉模型2.md  火炉模型3.md  火炉模型4.md
src/model/: README.md  __init__.py
src/model/backtrader/: README.md  __init__.py  example.py  example_multi_data.py  example_simple.py
src/model/backtrader/core/: __init__.py  broker.py  comm_info.py  data_adapter.py  engine.py
src/model/backtrader/strategy/: __init__.py  base.py  indicator_example_strategy.py  multi_data_strategy.py  rsi_strategy.py  sma_cross_strategy.py  trigger_example.py
src/model/backtrader/strategy/hydro_cost_dynamics/: __init__.py  hcd_model.py  hcd_strategy.py
src/model/backtrader/strategy/thermodynamic/: __init__.py  burn_rate.py  chip_peak.py  signals.py  thermal_params.py
src/model/backtrader/trigger/: __init__.py  signal_trigger.py  time_trigger.py
src/model/policy/: simple_strategy_example.py  test.py
src/utils/: stock_utils.py
src/utils/stock_data/: __init__.py  bt_adapter.py  data_handler.py
src/utils/stock_data/data_source/: baostock_handler.py
